<resources>
    <string name="app_name">MyHotixGuest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_details">Détails</string>
    <string name="nav_facture">Facture</string>
    <string name="nav_reclamations">Réclamations</string>
    <string name="nav_activites">Activités</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_restaurants">Restaurants</string>
    <string name="nav_about_us">A propos</string>
    <string name="nav_commander">Commander</string>
    <string name="nav_reserver">Réservation</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Détails</item>
        <item>Facture</item>
        <item>Réclamations</item>
        <item>Activités</item>
        <item>Notifications</item>
        <item>Restaurants</item>
        <item>Commander</item>
        <item>Réservation</item>
    </string-array>
    <string name="input">Réclamation</string>
    <string name="input_custominvalidation">Input (Custom Invalidation)</string>
    <string name="input_hint">Votre réclamation</string>
    <string name="input_content">Quelque chose pas bien ?</string>
    <string name="input_prefill"></string>
    <string name="activity_title_about_us">A propos</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Se Connecter</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="ressayer">Réessayer</string>
    <string name="cancel">Annuler</string>
    <string name="obl">Obligatoire</string>
    <string name="updating">Téléchargement ..</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="last_version_ok">Vous avez la dernière version. L\'application est à jour</string>
    <string name="last_version_no">Vous n\'avez  pas la dernière version. Cliquer sur "OK" pour la mettre à jour</string>
    <string name="update">Mettre à jour</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="designation">Désignation</string>
    <string name="commentaire">Comment.</string>
    <string name="montant">Montant</string>
    <string name="chb_fact">Num Chambre :</string>
    <string name="facture">Facture</string>
    <string name="reclamation">Réclamation</string>
    <string name="other">Autres</string>
    <string name="reclamations">Réclamations</string>
    <string name="pas_reclamation">Pas de Réclamations ! </string>
    <string name="pas_restau">Pas de Restaurants ! </string>
    <string name="pas_activ">Pas d\'Activitées ! </string>
    <string name="pas_notif">Pas de Notifications ! </string>
    <string name="submit">Envoyer</string>
    <string name="encours">En cours</string>
    <string name="msg">Message</string>

    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="action_settings">Settings</string>

    <string name="tab_title_time">Time</string>
    <string name="tab_title_date">Date</string>
    <string name="tab_title_datetime">Date+Time</string>
    <string name="object">Object : </string>
    <string name="desc">Description: </string>
    <string name="date_decl">Déclaré le : </string>
    <string name="date_deb">Début : </string>
    <string name="date_fin">Fin : </string>
    <string name="price">Prix : </string>
    <string name="chb">Chambre : </string>
    <string name="fac">Facture : </string>
    <string name="laoding">Chargement ..</string>
    <string name="laoding_error">Erreur de connexion </string>
    <string name="nbr_chambre">N° Chambres </string>
    <string name="nbr_adultes">N° Adultes </string>
    <string name="nbr_enfants">N° Enfants </string>
    <string name="arr">Arrangement</string>
    <string name="chbtype">Type Chambre</string>
    <string name="dispo">Voir</string>
    <string name="comment">Commentaire :</string>
    <string name="pour">Pour :</string>
    <string name="nbr_pax">Nbr de Personnes :</string>
    <string name="date_arr">Date :</string>
    <string name="heure_arr">Heure  :</string>
    <string name="tarif">Tarif </string>
    <string name="resa_rest">Réservation restaurant :</string>
</resources>
