<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facture"
            android:icon="@mipmap/ic_assignment_black_24dp"
            android:title="@string/nav_facture" />
        <item
            android:id="@+id/nav_reclamations"
            android:icon="@mipmap/ic_announcement_black_24dp"
            android:title="@string/nav_reclamations" />
        <item
            android:id="@+id/nav_activite"
            android:icon="@mipmap/ic_card_giftcard_black_24dp"
            android:title="@string/nav_activites" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_restaurants"
            android:icon="@mipmap/ic_local_dining_black_24dp"
            android:title="@string/nav_restaurants" />
        <item
            android:id="@+id/nav_commande"
            android:icon="@mipmap/ic_add_shopping_cart_black_24dp"
            android:title="@string/nav_commander" />
        <item
            android:id="@+id/nav_reservation"
            android:icon="@mipmap/ic_event_black_24dp"
            android:title="@string/nav_reserver" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>