<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/pax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"
        android:hint="@string/nbr_pax"
        android:textColorHint="@color/colorPrimary"
        app:met_floatingLabel="normal" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:layout_toLeftOf="@+id/chambre"
            android:layout_toStartOf="@+id/chambre"
            android:layout_weight="1">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@mipmap/ic_event_available_black_24dp"

                android:hint="@string/date_arr"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:layout_toLeftOf="@+id/chambre"
            android:layout_toStartOf="@+id/chambre"
            android:layout_weight="1">

            <EditText
                android:id="@+id/hour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:drawableLeft="@mipmap/ic_event_available_black_24dp"
                android:hint="@string/heure_arr"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_arr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pax"
        android:layout_weight="1">

        <EditText
            android:id="@+id/pour"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pour"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_depart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_layout_arr"
        android:layout_weight="1">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="272dp"
            android:layout_below="@+id/input_layout_arr"
            android:layout_centerHorizontal="true"
            android:gravity="top|left"
            android:hint="@string/comment"
            android:inputType="textMultiLine"
            android:lines="8"
            android:scrollbars="vertical"></EditText>
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>