<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hotix.myhotixguest.fragment.FactureFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <!--    <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/facture"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorWhite"
                    android:textSize="35sp"
                    android:textStyle="bold" />

            </LinearLayout>
    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/heure_fermeture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/chb_fact"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numchbFact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <TableLayout
                    android:id="@+id/table1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:stretchColumns="*">

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/fact_shape"
                            android:gravity="center"
                            android:padding="5dp"

                            android:text="Date    "
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/text"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/fact_shape"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/designation"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/commentfact"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/fact_shape"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/commentaire"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/montfact"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/montant"
                            android:textColor="@color/colorWhite"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="TOTAL :"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/totalFacture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0 DT"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</FrameLayout>
